# air_quality_dwh

./: DWH_projekt_zaliczeniowy.md  Dockerfile  LICENSE  ProjektHD.md  README.md  docker-compose.yaml  pyproject.toml
dags/: air_quality_dag.py
dashboard/: app.py
docs/: dags.html  dashboard.html  index.html  search.js  src.html
docs/dags/: air_quality_dag.html
docs/dashboard/: app.html
docs/src/: api_client.html  config.html  db_tools.html  etl_measurements.html  init_dwh.html  initial_load.html  load_data.html
src/: api_client.py  config.py  db_tools.py  etl_measurements.py  init_dwh.py  initial_load.py  load_data.py  main.py
tests/: test_db_tools.py
